rows no longer overlap

--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -71,6 +71,7 @@ a:hover{
     transition: 0.2s;
 }
 
-/* .row{
+.row{
     padding:4%;
-} */
+    
+}
